<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FillTheJar</string>
    <string name="action_settings">Preferencias</string>
    <string name="action_about">Acerca de</string>
    <string name="about_us">About us</string>
    <string name="about_us_text"><b>Desarrolladores:</b>\n Sergio Fernández\n Jorge León\n Gonzalo Gómez\n<b>Diseño icono:</b>\n Miguel Magaz</string>
    <string name="jar_list">Lista de tarros</string>
    <string name="name">Nombre</string>
    <string name="saved">guardado</string>
    <string name="fill">+</string>
    <string name="filled">Rellenado</string>
    <string name="it_can_not_be_filled_today">No se puede rellenar hoy</string>
    <string name="streak">Racha</string>
    <string name="tarea">Tarea/motivacion</string>
    <string name="frecuencia">Frecuencia</string>
    <string name="weekend">Fines de semana</string>
    <string name="streak2">Veces a realizar</string>
    <string name="new_jar">Nuevo</string>
    <string name="dsc_frec">Cada cuanto tiempo se eliminará una moneda del si no se ha llenado al menos una vez</string>
    <string name="dsc_weekend">Marcar si los fines de semana se tendrán en cuenta para eliminar las monedas</string>
    <string name="dsc_streak">El máximo número de veces que se puede rellenar el tarro por cada ciclo de frecuencia</string>
    <string name="delete">borrado</string>
    <string name="erased">borrar</string>
    <string name="modify">Modificado</string>
    <string name="confirmation_del">¿Seguro que desea eliminar?</string>
    <string name="confirmation_add">Introduzca un nombre</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="edition">Edicion</string>
    <string name="cancel">Cancelar</string>
    <string name="record">Grabar</string>
    <string name="change">Modificar</string>
    <string name="empty">Vaciar</string>
</resources>