<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tarea"
	    />
    <EditText
        android:id="@+id/jarNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/name">
        <requestFocus />
    </EditText>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/frecuencia"
	    />
    <Spinner
        android:id="@+id/SFrecuency"
    	android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:entries="@array/SFrecuency"
   		android:prompt="@string/frecuency_prompt"
   		android:drawSelectorOnTop="True"
        />
	 <CheckBox 
        android:id="@+id/Check_weekend"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:hint="@string/weekend"
    	android:checked="false"
         />
	 <TextView 
        android:id="@+id/tx_streak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/streak2"
	    />
	 <Spinner
        android:id="@+id/SpStreak"
    	android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:entries="@array/SpStreak"
   		android:drawSelectorOnTop="True"
        />
</LinearLayout>